Fix spacing below .scroll-wrappers

--- a/wp-content/charts.css
+++ b/wp-content/charts.css
@@ -3,6 +3,7 @@
 	clear: both;
 	overflow-x: scroll;
 	background: #f3f3f3;
+	margin-bottom: 20px;
 }
 
 /* Dropdown selectors */
